# blockhash

./: .gitignore  AUTHORS  CMakeLists.txt  CNAME  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  blockhash.c  blockhash.h  blockhash.pc.in  bmp_image.h  config.h.in  configure  configure.ac  imagehash.c  index.html  libtool  main.c  misc.c  parameters.h  params.json  prepare  process_image.c  process_video.c  processing.h  test.sh  version.h  videohash.c  videorooter.conf  wscript
.github/workflows/: test.yml
.kdev4/: blockhash.kdev4
src/: .kdev_include_paths  CImg-ext.h  CImg.h  Makefile.am  Makefile.in  Makefile.kdev4  blockhash.c  blockhash.h  blockhash.kdev4  bmp_image.h  main.c  misc.c  pHash-img-c.cpp  pHash-img-c.h  pHash-img.cpp  pHash-img.h  process_image.c  process_video.c  processing.h  version.h
src/.kdev4/: blockhash.kdev4
stylesheets/: stylesheet.css
testdata/: exact-hashes.txt  image-hashes.txt  image-quick-hashes.txt  quick-hashes.txt  sources.txt  video-hashes.txt  video-quick-hashes.txt
testdata/videos/: 29684.29680.WEEKNUMMER263-HRE0000D0AB.mpeg  quick-hashes.txt
